@@ -1,42 +1,33 @@
 package com.security.session.module.users.service;
 
-import com.security.session.module.users.dto.UserImpl;
+import com.security.session.module.users.dto.UserDetailsImpl;
 import com.security.session.module.users.entity.Users;
 import com.security.session.module.users.repository.UsersRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
 
     private final UsersRepository usersRepository;
 
-
-    public UserDetailsServiceImpl(UsersRepository usersRepository) {
-        this.usersRepository = usersRepository;
-    }
-
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         Users users = usersRepository.findByEmail(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + username));
+                .orElseThrow(() -> new UsernameNotFoundException(username));
 
-        List<GrantedAuthority> grantedAuthorities = users.getAuthorities().stream()
-                .map(authority -> new SimpleGrantedAuthority(authority.getAuthorityName()))
-                .collect(Collectors.toList());
+        List<SimpleGrantedAuthority> authorities = users.getAuthorities().stream()
+                .map(authority ->  new SimpleGrantedAuthority(authority.getAuthorityName()))
+                .toList();
 
-
-        UserImpl userDetails = new UserImpl(users.getEmail(), users.getPassword(), grantedAuthorities);
-        userDetails.setDetails(users);
-
-        return userDetails;
+        return new UserDetailsImpl(users, authorities);
     }
 }
